# anime_assistant

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose-utils.yml  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg
.github/instructions/: developer_eng.instructions.md
books/: 2025-07-07_chcp_download-metadata.ipynb  2025-07-22_chcp_workflow.ipynb
books/assets/: collect_workflow.html  global_workflow.html  loop_workflow.html  trivial_workflow.html  wait_workflow.html
scripts/: 10_ingest_anime.sh
src/: app.py  constants.py  ingest.py  query_engine.py  rag_index.py  settings.py  setup_telemetry.py  utils.py
src/db/: weaviate_adapter.py
src/models/: anime.py
src/parsers/: anime.py
src/prompts/: anime_rag_v1.txt  anime_rag_v2.txt  manager.py
tests/: test_ingest.py  test_manager.py  test_parsers_anime.py  test_query_engine.py  test_rag_index.py  test_weaviate_adapter.py
