[metadata]
name = anime_assistant
version = 0.0.0

[options]
packages = find:
install_requires =
    numpy
    fastapi
    uvicorn
    httpx
    mypy==1.16.1
    pydantic_settings
    loguru
    requests-cache
    chromadb
    llama-index>=0.12.47
    llama-index-vector-stores-chroma
    llama-index-embeddings-huggingface
    llama-index-llms-groq
    llama-index-core
    llama-index-utils-workflow
    openinference-instrumentation-llama-index
    gradio
    langfuse
    deepeval
    weaviate-client
    ragas
    arize-phoenix
    Faker
    unstructured[all-docs]

[options.extras_require]
dev =
    ipython
    ipdb
    ruff==0.11.2
    pre-commit
    pytest
    coverage
    ipykernel
    jupyterlab
    jupyterlab_execute_time
    jupyterlab-code-formatter
    iprogress
    npm
    node
    nodejs
    black
    isort

[flake8]
max-line-length = 88
